# fifakom-genealogia

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
data-naturalearth/: _.txt.md
data-naturalearth/Vector-Physical/: ne_110m_coastline.geojson  ne_110m_glaciated_areas.geojson  ne_110m_lakes.geojson  ne_110m_rivers_lake_centerlines.geojson  ne_50m_glaciated_areas.geojson  ne_50m_lakes.geojson  ne_50m_lakes_historic.geojson  ne_50m_rivers_lake_centerlines.geojson  ne_50m_rivers_lake_centerlines_scale_rank.geojson  ne__ramka.geojson
data/genealodzy-geneteka/raw/: rejestry_2026-03-06.html
doc/: code-rust-app.md  code-rust-lib.md  code-slint.md
src/lib/: mod.rs  window.rs
src/lib/atlas/: generator.rs  mod.rs  modele.rs  renderer.rs
src/lib/atlas/projekcje/: mod.rs  proj_dynamiczna.rs  proj_plate_carree.rs
src/lib/cli/: menu.rs
src/lib/geneteka/: data_raw_modele.rs  mod.rs  modele.rs  parser_html.rs  parser_kml.rs  parser_zakresu.rs  pobieracz_html.rs  pobieracz_kml.rs  pobrany_najnowszy.rs  zakres_googlemaps.rs
src/lib/logic/: format.rs  mod.rs  morphology.rs  utils.rs
src/lib/pliki/: mod.rs  path_data_naturalearth.rs
src/ui/: app-window.slint  genpk_window.slint  globals.slint  index.slint
src/ui/app/: app-geneteka-zakres.slint  geneteka_co_jest_window.slint  genpk_window.slint
src/ui/components/: mapa-kanwa.slint  mapa-kokpit.slint  title-bar.slint  window-shell.slint
src/ui/element/: mapa-warstwy-danych.slint  mapa.slint
src/ui/theme/: globals.slint
